# ChatAPI

./: .gitignore  CLAUDE.md  EN-README.md  README.md  start.sh
backend/: .env.example  app.py  pyproject.toml  store.py
backend/core/: config.py  dependencies.py
backend/repositories/: conversations.py  system_config.py  users.py
backend/repositories/conversation_store/: message_crud.py
backend/routes/: __init__.py  anthropic.py  chat_completions.py  conversations.py  realtime.py  responses.py  statistics.py  user_config.py
backend/routes/auth_handlers/: session_routes.py
backend/services/: __init__.py  automation_rules.py  chat_parsers.py  ntfy.py  output_controller.py  payload_anthropic.py  payload_openai.py  pending.py  realtime.py  response_payloads.py  response_stream.py  stream_anthropic.py  stream_chat_completions.py  stream_common.py  stream_responses.py  thinking.py  turn_coordinator.py  turn_protocols.py  url_safety.py
backend/tests/: test_chat_parsers.py  test_pending.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AutomationRuleEditorModal.tsx  ChatPane.tsx  ConversationSidebar.tsx  LoginScreen.tsx  WorkspaceRoute.tsx
frontend/src/components/settings/: AutomationRulesPanel.tsx  ModelManagementPanel.tsx  SettingsModal.tsx  StatisticsPanel.tsx  (+1 more)
frontend/src/hooks/: useAuthSession.ts  useAutomationRules.ts  useChatWorkspace.ts  useWorkspaceRealtime.ts
frontend/src/lib/: api.ts  chat-format.tsx
frontend/src/types/: chat.ts
tests/: README.md  main.py  pyproject.toml
(+3 files in other folders)
