[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=6.0.2",
    "flask-sock>=0.7.0",
    "python-dotenv>=1.2.2",
    "qrcode>=7.4",
    "pillow>=10.0",
    "resend>=2.0.0",
    "sib-api-v3-sdk>=7.6.0",
    "tencentcloud-sdk-python>=3.0.0",
    "gunicorn>=26.0.0",
    "regex>=2024.11.6",
]
